# kopikatAPI

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release_to_pypi.yml
examples/: basic_cv_usage.py
kopikatapi/: __init__.py  enums.py  kopikatapi.py
