[tool.poetry]
name = "kopikat-python"
version = "0.1.0"
description = ""
authors = ["Onuralp SEZER <thunderbirdtr@gmail.com>"]
readme = "README.md"
packages = [{include = "kopikat_python"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"

opencv-python = { version = "^4.8.0.74", optional = true }
opencv-python-headless = { version = "^4.8.0.74", optional = true }
pillow =  { version = "^10.0.0", optional = true } 


[tool.poetry.extras]
desktop = ["opencv-python"]
headless = ["opencv-python-headless"]
pillow = ["pillow"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
